@@ -61,6 +61,7 @@ Enhancements:
 - #7412 Reduce GUI compile time by building a GUI library
 - #7413 Improve UI design and reduce over-use of `#ifdef`
 - #7414 Expand BSD sockets poll tests and remove legacy-poll code
+- #7415 Assert arg value `num > 0` for BSD socket poll unblock pipe
 
 # 1.14.6
 
